--- a/index.html
+++ b/index.html
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Super Wars1</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Super Wars</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+  <body>
+    <div class="arena">
+      <div id="heroes" class="team">
+        <div class="players">
+          <img src="./images/super-1.png" alt="" />
+          <div class="name">Spiderman</div>
+          <div class="strength">12</div>
+        </div>
+        <div class="players">
+          <img src="./images/super-3.png" alt="" />
+          <div class="name">Wonder Women</div>
+          <div class="strength">30</div>
+        </div>
+      </div>
+      <div id="score">5-0</div>
+      <div id="villains" class="team">
+        <div class="players">
+          <img src="./images/super-2.png" alt="" />
+          <div class="name">Captain America</div>
+          <div class="strength">50</div>
+        </div>
+        <div class="players">
+          <img src="./images/super-4.png" alt="" />
+          <div class="name">Gem Women</div>
+          <div class="strength">12</div>
+        </div>
+      </div>
+    </div>
 
-<body>
-    
-    <footer class="footer">Made with <img src="/images/Vector.svg"> by ProGrad</footer>
-</body>
-
+    <footer class="footer">
+      Made with <img src="/images/Vector.svg" /> by ProGrad
+    </footer>
+  </body>
 </html>
